--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -509,6 +509,12 @@ Bla bla bla...
 	\caption{Home page sequence diagram.}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/liningUp_sequence_diagram.pdf}
+	\caption{Lining Up sequence diagram.}
+\end{figure}
+
 \subsection{Mapping on Requirements}
 
 \section{Performance Requirements}
