--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -515,6 +515,24 @@ Bla bla bla...
 	\caption{Lining Up sequence diagram.}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/bookingVisit_sequence_diagram.pdf}
+	\caption{Booking a Visit sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/getStatusPage_sequence_diagram.pdf}
+	\caption{Status page sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/getQRcodePage_sequence_diagram.pdf}
+	\caption{QR code page sequence diagram.}
+\end{figure}
+
 \subsection{Mapping on Requirements}
 
 \section{Performance Requirements}
