--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -511,6 +511,24 @@ Bla bla bla...
 
 \begin{figure}[H]
 	\centering
+	\includegraphics[width=1.0\textwidth]{images/signUp_sequence_diagram.pdf}
+	\caption{Sign Up sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/logIn_sequence_diagram.pdf}
+	\caption{Log In sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/logOut_sequence_diagram.pdf}
+	\caption{Log Out sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
 	\includegraphics[width=1.0\textwidth]{images/liningUp_sequence_diagram.pdf}
 	\caption{Lining Up sequence diagram.}
 \end{figure}
@@ -524,13 +542,25 @@ Bla bla bla...
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/getStatusPage_sequence_diagram.pdf}
-	\caption{Status page sequence diagram.}
+	\caption{Get Status sequence diagram.}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/getQRcodePage_sequence_diagram.pdf}
 	\caption{QR code page sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/getControlQueuePage_sequence_diagram.pdf}
+	\caption{Control Queue sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/getShowStatsPage_sequence_diagram.pdf}
+	\caption{Show Stats sequence diagram.}
 \end{figure}
 
 \subsection{Mapping on Requirements}
